- updated dependencies - switched to pi4j dynamic linking - bugfixes